--- a/.eVar/.env
+++ b/.eVar/.env
@@ -1,4 +1,5 @@
 SECRET_KEY='django-insecure-gwn$a5ue=mchshc06dex+pyz(d7gnser*v#4%83i2ux!@0_xu#'
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
-DATABASE_URL=mysql://admin:Grill!1@localhost:3306/grill_db
+ALLOWED_HOSTS=localhost,127.0.0.1  # Only for local development
+DATABASE_URL=mysql://admin:Grill!1@localhost:3306/grill_db  # Local MySQL connection
+IS_PRODUCTION=False  # Indicate that this is the local environment
